Sun Jan  7 12:06:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Acceptor_Filter_Factory.h:
          Fixed problem with CORBA/e

        * tao/PortableServer/Object_Adapter.cpp:
        * tao/PortableServer/Root_POA.cpp:
          Fixed compile problems when building CORBA/e compact with Borland C++

Sat Jan  6 19:16:55 UTC 2007  Chris Cleeland  <cleeland_c@ociweb.com>

        * TAO_IDL:
        * examples/AMI/FL_Callback:
        * orbsvcs/Concurrency_Service:
        * orbsvcs/CosEvent_Service:
        * orbsvcs/Dump_Schedule:
        * orbsvcs/Event_Service:
        * orbsvcs/FTRT_Event_Service/Event_Service:
        * orbsvcs/FTRT_Event_Service/Factory_Service:
        * orbsvcs/FTRT_Event_Service/Gateway_Service:
        * orbsvcs/FT_ReplicationManager:
        * orbsvcs/Fault_Detector:
        * orbsvcs/Fault_Notifier:
        * orbsvcs/IFR_Service:
        * orbsvcs/ImplRepo_Service:
        * orbsvcs/LifeCycle_Service:
        * orbsvcs/LoadBalancer:
        * orbsvcs/Logging_Service/Basic_Logging_Service:
        * orbsvcs/Logging_Service/Event_Logging_Service:
        * orbsvcs/Logging_Service/Notify_Logging_Service:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service:
        * orbsvcs/Naming_Service:
        * orbsvcs/Notify_Service:
        * orbsvcs/Scheduling_Service:
        * orbsvcs/TAO_Service:
        * orbsvcs/Time_Service:
        * orbsvcs/Trading_Service:
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage:
        * orbsvcs/tests/AVStreams/Bidirectional_Flows:
        * orbsvcs/tests/AVStreams/Component_Switching:
        * orbsvcs/tests/AVStreams/Full_Profile:
        * orbsvcs/tests/AVStreams/Latency:
        * orbsvcs/tests/AVStreams/Modify_QoS:
        * orbsvcs/tests/AVStreams/Multicast:
        * orbsvcs/tests/AVStreams/Multicast_Full_Profile:
        * orbsvcs/tests/AVStreams/Multiple_Flows:
        * orbsvcs/tests/AVStreams/Pluggable: